[gd_scene load_steps=8 format=2]

[ext_resource path="res://ZUMI IMAGENES/REPASO BOTON.jpg" type="Texture" id=1]
[ext_resource path="res://ZUMI IMAGENES/COLORES BOTON.jpg" type="Texture" id=2]
[ext_resource path="res://Control.gd" type="Script" id=3]
[ext_resource path="res://sonidos/leon.mp3" type="AudioStream" id=4]
[ext_resource path="res://ZUMI IMAGENES/NUMEROS BOTON.jpg" type="Texture" id=5]
[ext_resource path="res://ZUMI IMAGENES/ABCEDARIO BOTON.jpg" type="Texture" id=6]
[ext_resource path="res://ZUMI IMAGENES/ZUMI FONDO AZUL.jpg" type="Texture" id=7]

[node name="Node" type="Node"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -427.357
margin_top = -59.6606
margin_right = -199.357
margin_bottom = 40.3394
rect_pivot_offset = Vector2( -161.661, -106.185 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ABC" type="TextureButton" parent="Control/VBoxContainer"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 250, 150 )
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="sonido" type="AudioStreamPlayer2D" parent="Control/VBoxContainer/ABC"]
stream = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.176
margin_top = -59.6606
margin_right = 135.824
margin_bottom = 90.3394
__meta__ = {
"_edit_use_anchors_": false
}

[node name="colores" type="TextureButton" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 250, 150 )
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="sonido" type="AudioStreamPlayer2D" parent="VBoxContainer/colores"]
stream = ExtResource( 4 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 222.709
margin_top = -59.9955
margin_right = 472.709
margin_bottom = 90.0045
__meta__ = {
"_edit_use_anchors_": false
}

[node name="numeros" type="TextureButton" parent="VBoxContainer2"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 250, 150 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="sonido" type="AudioStreamPlayer2D" parent="VBoxContainer2/numeros"]
stream = ExtResource( 4 )

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
anchor_left = 0.48
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.9182
margin_top = 131.682
margin_right = 135.682
margin_bottom = 331.682
rect_min_size = Vector2( 250, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="repaso" type="TextureButton" parent="VBoxContainer3"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 250, 150 )
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="sonido" type="AudioStreamPlayer2D" parent="VBoxContainer3/repaso"]
stream = ExtResource( 4 )

[connection signal="pressed" from="Control/VBoxContainer/ABC" to="Control" method="_on_ABC_pressed"]
[connection signal="pressed" from="VBoxContainer/colores" to="Control" method="_on_colores_pressed"]
[connection signal="pressed" from="VBoxContainer/colores" to="Control" method="_on_ABC_pressed"]
[connection signal="pressed" from="VBoxContainer2/numeros" to="Control" method="_on_numeros_pressed"]
[connection signal="pressed" from="VBoxContainer2/numeros" to="Control" method="_on_ABC_pressed"]
[connection signal="pressed" from="VBoxContainer3/repaso" to="Control" method="_on_repaso_pressed"]
[connection signal="pressed" from="VBoxContainer3/repaso" to="Control" method="_on_ABC_pressed"]
